--- a/index.html
+++ b/index.html
@@ -3,100 +3,95 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>📻</title>
+<title>Anılar</title>
 
 <style>
 body{
   margin:0;
   font-family:Georgia, serif;
-  background:linear-gradient(180deg,#f7efe1,#f3e8ff);
+  background:linear-gradient(180deg,#f7efe1,#efe6d8);
   overflow-x:hidden;
 }
 
-/* Kar */
+/* KAR */
 .snow{
   position:fixed;
   top:-10px;
   background:white;
   border-radius:50%;
-  opacity:.7;
+  opacity:.6;
   animation:fall linear infinite;
   pointer-events:none;
-  z-index:2;
+  z-index:1;
 }
 @keyframes fall{to{transform:translateY(120vh);}}
 
-/* Alan */
+/* ANA ALAN */
 .container{
-  max-width:430px;
+  max-width:460px;
   margin:auto;
-  padding:100px 10px 0;
+  padding:110px 12px 0;
 }
 
-/* Kart */
+/* ANIDEFTERI GRID */
+.grid{
+  display:flex;
+  flex-wrap:wrap;
+  justify-content:space-between;
+}
+
+/* KART */
 .card{
-  position:relative;
-  width:65%;
+  width:48%;
   background:#f3ecd9;
-  padding:12px 12px 26px;
-  border-radius:16px;
-  box-shadow:0 18px 38px rgba(0,0,0,.25);
-  margin:80px auto;
+  padding:10px 10px 22px;
+  border-radius:14px;
+  box-shadow:0 14px 32px rgba(0,0,0,.25);
+  margin-bottom:80px;
   opacity:0;
-  transform:translateY(40px) scale(.95);
-  transition:all 1.2s ease;
+  transition:all 1.1s ease;
 }
 
-.card::after{
-  content:"";
-  position:absolute;
-  inset:0;
-  background:rgba(0,0,0,.04);
-  border-radius:16px;
-  pointer-events:none;
-}
-
-/* Konum stilleri */
-.s1{transform:translateY(40px) rotate(-3deg) translateX(-24px) scale(.95);}
-.s2{transform:translateY(40px) rotate(2deg) translateX(20px) scale(.95);}
-.s3{transform:translateY(40px) rotate(-1deg) translateX(10px) scale(.95);}
-.s4{transform:translateY(40px) rotate(3deg) translateX(-12px) scale(.95);}
-.s5{transform:translateY(40px) rotate(0deg) translateX(0) scale(.95);}
+/* DOĞAL KAYIKLIK */
+.card:nth-child(odd){transform:translateY(40px) rotate(-2.5deg);}
+.card:nth-child(even){transform:translateY(40px) rotate(2deg);}
+.card:nth-child(3n){margin-top:60px; transform:translateY(40px) rotate(-1deg);}
+.card:nth-child(4n){margin-top:20px; transform:translateY(40px) rotate(3deg);}
 
 .card.show{
   opacity:1;
-  transform:translateY(0) rotate(0) translateX(0) scale(1);
+  transform:translateY(0) rotate(var(--r,0deg));
 }
 
-/* Foto */
+/* FOTO */
 .card img{
   width:100%;
-  height:210px;
+  height:190px;
   object-fit:cover;
-  border-radius:10px;
+  border-radius:8px;
   filter:sepia(.35) contrast(1.05) brightness(.95);
 }
 
-/* Not */
+/* NOT */
 .note{
-  margin-top:10px;
-  text-align:center;
-  font-size:14px;
+  margin-top:8px;
+  font-size:13px;
   font-style:italic;
+  text-align:center;
   color:#6b5b3e;
 }
 
 /* BİTİŞTEN ÖNCE UZUN BOŞLUK */
 .spacer{
-  height:600px;
+  height:700px;
 }
 
-/* Kapanış notu */
+/* KAPANIŞ NOTU */
 .end-note{
-  width:80%;
+  width:85%;
   background:#f8f1df;
-  margin:0 auto 120px;
-  padding:40px 28px 55px;
+  margin:0 auto 140px;
+  padding:38px 26px 55px;
   border-radius:18px;
   box-shadow:0 15px 35px rgba(0,0,0,.2);
   font-style:italic;
@@ -104,72 +99,82 @@ body{
   color:#5c4a2d;
   opacity:0;
   transform:translateY(40px);
-  transition:all 1.4s ease;
+  transition:all 1.3s ease;
 }
 .end-note.show{
   opacity:1;
   transform:translateY(0);
 }
 
-/* PLAK BUTONU */
-.player{
+/* PİKAP */
+.turntable{
   position:fixed;
-  bottom:25px;
+  bottom:22px;
   left:50%;
   transform:translateX(-50%);
-  width:80px;
-  height:80px;
-  border-radius:50%;
-  background:radial-gradient(circle,#333 30%,#111 70%);
-  box-shadow:0 15px 40px rgba(0,0,0,.5);
-  border:4px solid #5a3e2b;
-  cursor:pointer;
+  width:90px;
+  height:90px;
+  background:#5a3e2b;
+  border-radius:12px;
+  box-shadow:0 20px 40px rgba(0,0,0,.6);
   z-index:10;
 }
-.player::after{
+
+/* PLAK */
+.vinyl{
+  position:absolute;
+  top:10px;
+  left:10px;
+  width:70px;
+  height:70px;
+  background:radial-gradient(circle,#111 30%,#000 70%);
+  border-radius:50%;
+}
+.vinyl::after{
   content:"";
   position:absolute;
-  inset:18px;
+  inset:26px;
   background:#cfa56a;
   border-radius:50%;
 }
+
 .spin{
   animation:spin 3s linear infinite;
 }
-@keyframes spin{
-  to{transform:rotate(360deg);}
-}
+@keyframes spin{to{transform:rotate(360deg);}}
+
 </style>
 </head>
 
 <body>
 
 <div class="container">
+<div class="grid">
 
 <!-- 20 FOTO -->
-<div class="card s1"><img src="foto1.jpg"><div class="note">Yılın ilk günü</div></div>
-<div class="card s2"><img src="foto2.jpg"><div class="note">Kaybolduğumuz sokak</div></div>
-<div class="card s3"><img src="foto3.jpg"><div class="note">Güldüğümüz an</div></div>
-<div class="card s4"><img src="foto4.jpg"><div class="note">Sessiz bir akşam</div></div>
-<div class="card s5"><img src="foto5.jpg"><div class="note">Uzun yürüyüş</div></div>
+<div class="card"><img src="foto1.jpg"><div class="note">Yılın ilk günü</div></div>
+<div class="card"><img src="foto2.jpg"><div class="note">Kaybolduğumuz sokak</div></div>
+<div class="card"><img src="foto3.jpg"><div class="note">Güldüğümüz an</div></div>
+<div class="card"><img src="foto4.jpg"><div class="note">Sessiz bir akşam</div></div>
+<div class="card"><img src="foto5.jpg"><div class="note">Uzun yürüyüş</div></div>
+<div class="card"><img src="foto6.jpg"><div class="note">Soğuk ama güzel</div></div>
+<div class="card"><img src="foto7.jpg"><div class="note">Birlikteyken</div></div>
+<div class="card"><img src="foto8.jpg"><div class="note">Aniden</div></div>
+<div class="card"><img src="foto9.jpg"><div class="note">Hatırladıkça</div></div>
+<div class="card"><img src="foto10.jpg"><div class="note">Yıl ortası</div></div>
 
-<div class="card s2"><img src="foto6.jpg"><div class="note">Soğuk ama güzel</div></div>
-<div class="card s1"><img src="foto7.jpg"><div class="note">Birlikteyken</div></div>
-<div class="card s3"><img src="foto8.jpg"><div class="note">Aniden</div></div>
-<div class="card s4"><img src="foto9.jpg"><div class="note">Hatırladıkça</div></div>
-<div class="card s5"><img src="foto10.jpg"><div class="note">Yıl ortası</div></div>
+<div class="card"><img src="foto11.jpg"><div class="note">Yaz günü</div></div>
+<div class="card"><img src="foto12.jpg"><div class="note">Güneşli bir an</div></div>
+<div class="card"><img src="foto13.jpg"><div class="note">Kahkahalar</div></div>
+<div class="card"><img src="foto14.jpg"><div class="note">Sessizlik</div></div>
+<div class="card"><img src="foto15.jpg"><div class="note">Yol</div></div>
+<div class="card"><img src="foto16.jpg"><div class="note">Sonbahar</div></div>
+<div class="card"><img src="foto17.jpg"><div class="note">Bir akşam</div></div>
+<div class="card"><img src="foto18.jpg"><div class="note">Düşünürken</div></div>
+<div class="card"><img src="foto19.jpg"><div class="note">Geriye bakınca</div></div>
+<div class="card"><img src="foto20.jpg"><div class="note">Yılın sonu</div></div>
 
-<div class="card s1"><img src="foto11.jpg"><div class="note">Yaz günü</div></div>
-<div class="card s2"><img src="foto12.jpg"><div class="note">Güneşli bir an</div></div>
-<div class="card s3"><img src="foto13.jpg"><div class="note">Kahkahalar</div></div>
-<div class="card s4"><img src="foto14.jpg"><div class="note">Sessizlik</div></div>
-<div class="card s5"><img src="foto15.jpg"><div class="note">Yol</div></div>
-
-<div class="card s2"><img src="foto16.jpg"><div class="note">Sonbahar</div></div>
-<div class="card s1"><img src="foto17.jpg"><div class="note">Bir akşam</div></div>
-<div class="card s3"><img src="foto18.jpg"><div class="note">Düşünürken</div></div>
-<div class="card s4"><img src="foto19.jpg"><div class="note">Geriye bakınca</div></div>
-<div class="card s5"><img src="foto20.jpg"><div class="note">Yılın sonu</div></div>
+</div>
 
 <div class="spacer"></div>
 
@@ -178,14 +183,17 @@ Buraya kadar geldik.<br><br>
 Bu bir son değil,<br>
 sadece bu sayfaların kapanışı.
 </div>
-
 </div>
 
-<div class="player" onclick="toggle()"></div>
+<!-- PİKAP -->
+<div class="turntable" onclick="toggle()">
+  <div class="vinyl"></div>
+</div>
+
 <audio id="ses" src="ses.mp3" loop></audio>
 
 <script>
-/* Scroll */
+/* SCROLL */
 const obs=new IntersectionObserver(entries=>{
   entries.forEach(e=>{
     if(e.isIntersecting) e.target.classList.add("show");
@@ -193,21 +201,21 @@ const obs=new IntersectionObserver(entries=>{
 },{threshold:.3});
 document.querySelectorAll(".card,.end-note").forEach(el=>obs.observe(el));
 
-/* Müzik */
+/* MÜZİK */
 let playing=false;
 function toggle(){
   const s=document.getElementById("ses");
-  const p=document.querySelector(".player");
-  if(!playing){ s.play(); p.classList.add("spin"); }
-  else{ s.pause(); p.classList.remove("spin"); }
+  const v=document.querySelector(".vinyl");
+  if(!playing){ s.play(); v.classList.add("spin"); }
+  else{ s.pause(); v.classList.remove("spin"); }
   playing=!playing;
 }
 
-/* Kar */
-for(let i=0;i<40;i++){
+/* KAR */
+for(let i=0;i<35;i++){
   const s=document.createElement("div");
   s.className="snow";
-  const size=4+Math.random()*6;
+  const size=3+Math.random()*6;
   s.style.width=s.style.height=size+"px";
   s.style.left=Math.random()*100+"vw";
   s.style.animationDuration=(6+Math.random()*6)+"s";
