--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Anılar</title>
+<title>Anı Defteri</title>
 
 <style>
 body{
@@ -26,41 +26,41 @@ body{
 }
 @keyframes fall{to{transform:translateY(120vh);}}
 
-/* ANA ALAN */
+/* ALAN */
 .container{
   max-width:460px;
   margin:auto;
-  padding:110px 12px 0;
+  padding:120px 12px 0;
 }
 
-/* ANIDEFTERI GRID */
-.grid{
-  display:flex;
-  flex-wrap:wrap;
-  justify-content:space-between;
+/* === MASONRY === */
+.masonry{
+  column-count:2;
+  column-gap:18px;
 }
 
 /* KART */
 .card{
-  width:48%;
+  break-inside:avoid;
   background:#f3ecd9;
   padding:10px 10px 22px;
   border-radius:14px;
   box-shadow:0 14px 32px rgba(0,0,0,.25);
-  margin-bottom:80px;
+  margin-bottom:28px;
   opacity:0;
+  transform:translateY(40px) scale(.96);
   transition:all 1.1s ease;
 }
 
-/* DOĞAL KAYIKLIK */
-.card:nth-child(odd){transform:translateY(40px) rotate(-2.5deg);}
+/* DOĞAL EĞİKLİK */
+.card:nth-child(odd){transform:translateY(40px) rotate(-2deg);}
 .card:nth-child(even){transform:translateY(40px) rotate(2deg);}
-.card:nth-child(3n){margin-top:60px; transform:translateY(40px) rotate(-1deg);}
-.card:nth-child(4n){margin-top:20px; transform:translateY(40px) rotate(3deg);}
+.card:nth-child(3n){transform:translateY(40px) rotate(-1deg);}
+.card:nth-child(4n){transform:translateY(40px) rotate(3deg);}
 
 .card.show{
   opacity:1;
-  transform:translateY(0) rotate(var(--r,0deg));
+  transform:translateY(0) rotate(0) scale(1);
 }
 
 /* FOTO */
@@ -81,12 +81,12 @@ body{
   color:#6b5b3e;
 }
 
-/* BİTİŞTEN ÖNCE UZUN BOŞLUK */
+/* BOŞLUK */
 .spacer{
-  height:700px;
+  height:800px;
 }
 
-/* KAPANIŞ NOTU */
+/* KAPANIŞ */
 .end-note{
   width:85%;
   background:#f8f1df;
@@ -119,8 +119,6 @@ body{
   box-shadow:0 20px 40px rgba(0,0,0,.6);
   z-index:10;
 }
-
-/* PLAK */
 .vinyl{
   position:absolute;
   top:10px;
@@ -137,21 +135,16 @@ body{
   background:#cfa56a;
   border-radius:50%;
 }
-
-.spin{
-  animation:spin 3s linear infinite;
-}
+.spin{animation:spin 3s linear infinite;}
 @keyframes spin{to{transform:rotate(360deg);}}
-
 </style>
 </head>
 
 <body>
 
 <div class="container">
-<div class="grid">
+<div class="masonry">
 
-<!-- 20 FOTO -->
 <div class="card"><img src="foto1.jpg"><div class="note">Yılın ilk günü</div></div>
 <div class="card"><img src="foto2.jpg"><div class="note">Kaybolduğumuz sokak</div></div>
 <div class="card"><img src="foto3.jpg"><div class="note">Güldüğümüz an</div></div>
@@ -162,17 +155,6 @@ body{
 <div class="card"><img src="foto8.jpg"><div class="note">Aniden</div></div>
 <div class="card"><img src="foto9.jpg"><div class="note">Hatırladıkça</div></div>
 <div class="card"><img src="foto10.jpg"><div class="note">Yıl ortası</div></div>
-
-<div class="card"><img src="foto11.jpg"><div class="note">Yaz günü</div></div>
-<div class="card"><img src="foto12.jpg"><div class="note">Güneşli bir an</div></div>
-<div class="card"><img src="foto13.jpg"><div class="note">Kahkahalar</div></div>
-<div class="card"><img src="foto14.jpg"><div class="note">Sessizlik</div></div>
-<div class="card"><img src="foto15.jpg"><div class="note">Yol</div></div>
-<div class="card"><img src="foto16.jpg"><div class="note">Sonbahar</div></div>
-<div class="card"><img src="foto17.jpg"><div class="note">Bir akşam</div></div>
-<div class="card"><img src="foto18.jpg"><div class="note">Düşünürken</div></div>
-<div class="card"><img src="foto19.jpg"><div class="note">Geriye bakınca</div></div>
-<div class="card"><img src="foto20.jpg"><div class="note">Yılın sonu</div></div>
 
 </div>
 
@@ -185,7 +167,6 @@ sadece bu sayfaların kapanışı.
 </div>
 </div>
 
-<!-- PİKAP -->
 <div class="turntable" onclick="toggle()">
   <div class="vinyl"></div>
 </div>
@@ -198,7 +179,7 @@ const obs=new IntersectionObserver(entries=>{
   entries.forEach(e=>{
     if(e.isIntersecting) e.target.classList.add("show");
   });
-},{threshold:.3});
+},{threshold:.2});
 document.querySelectorAll(".card,.end-note").forEach(el=>obs.observe(el));
 
 /* MÜZİK */
