--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
 <style>
 body{
   margin:0;
+  background:linear-gradient(180deg,#f6eddc,#efe4cf);
   font-family:Georgia, serif;
-  background:linear-gradient(180deg,#f7efe1,#efe6d8);
   overflow-x:hidden;
 }
 
@@ -17,65 +17,66 @@ body{
 .snow{
   position:fixed;
   top:-10px;
+  width:6px;
+  height:6px;
   background:white;
   border-radius:50%;
   opacity:.6;
   animation:fall linear infinite;
   pointer-events:none;
-  z-index:1;
 }
 @keyframes fall{to{transform:translateY(120vh);}}
 
 /* ALAN */
 .container{
-  max-width:460px;
+  max-width:420px;
   margin:auto;
-  padding:120px 12px 0;
-}
-
-/* === MASONRY === */
-.masonry{
-  column-count:2;
-  column-gap:18px;
+  padding-top:120px;
 }
 
 /* KART */
 .card{
-  break-inside:avoid;
+  width:75%;
   background:#f3ecd9;
-  padding:10px 10px 22px;
-  border-radius:14px;
-  box-shadow:0 14px 32px rgba(0,0,0,.25);
-  margin-bottom:28px;
+  padding:12px 12px 24px;
+  border-radius:16px;
+  box-shadow:0 18px 40px rgba(0,0,0,.28);
+  margin-bottom:140px;
   opacity:0;
-  transform:translateY(40px) scale(.96);
-  transition:all 1.1s ease;
+  transform:translateY(60px);
+  transition:all 1.2s ease;
 }
 
-/* DOĞAL EĞİKLİK */
-.card:nth-child(odd){transform:translateY(40px) rotate(-2deg);}
-.card:nth-child(even){transform:translateY(40px) rotate(2deg);}
-.card:nth-child(3n){transform:translateY(40px) rotate(-1deg);}
-.card:nth-child(4n){transform:translateY(40px) rotate(3deg);}
+/* SAĞ - SOL */
+.card.left{
+  margin-left:0;
+  margin-right:auto;
+  transform:translateY(60px) rotate(-2deg);
+}
+.card.right{
+  margin-left:auto;
+  margin-right:0;
+  transform:translateY(60px) rotate(2deg);
+}
 
 .card.show{
   opacity:1;
-  transform:translateY(0) rotate(0) scale(1);
+  transform:translateY(0) rotate(0);
 }
 
 /* FOTO */
 .card img{
   width:100%;
-  height:190px;
+  height:260px;
   object-fit:cover;
-  border-radius:8px;
+  border-radius:10px;
   filter:sepia(.35) contrast(1.05) brightness(.95);
 }
 
 /* NOT */
 .note{
-  margin-top:8px;
-  font-size:13px;
+  margin-top:10px;
+  font-size:14px;
   font-style:italic;
   text-align:center;
   color:#6b5b3e;
@@ -90,10 +91,10 @@ body{
 .end-note{
   width:85%;
   background:#f8f1df;
-  margin:0 auto 140px;
-  padding:38px 26px 55px;
+  margin:0 auto 160px;
+  padding:40px 28px 55px;
   border-radius:18px;
-  box-shadow:0 15px 35px rgba(0,0,0,.2);
+  box-shadow:0 18px 40px rgba(0,0,0,.25);
   font-style:italic;
   line-height:1.8;
   color:#5c4a2d;
@@ -109,7 +110,7 @@ body{
 /* PİKAP */
 .turntable{
   position:fixed;
-  bottom:22px;
+  bottom:24px;
   left:50%;
   transform:translateX(-50%);
   width:90px;
@@ -117,7 +118,6 @@ body{
   background:#5a3e2b;
   border-radius:12px;
   box-shadow:0 20px 40px rgba(0,0,0,.6);
-  z-index:10;
 }
 .vinyl{
   position:absolute;
@@ -137,26 +137,22 @@ body{
 }
 .spin{animation:spin 3s linear infinite;}
 @keyframes spin{to{transform:rotate(360deg);}}
+
 </style>
 </head>
 
 <body>
 
 <div class="container">
-<div class="masonry">
 
-<div class="card"><img src="foto1.jpg"><div class="note">Yılın ilk günü</div></div>
-<div class="card"><img src="foto2.jpg"><div class="note">Kaybolduğumuz sokak</div></div>
-<div class="card"><img src="foto3.jpg"><div class="note">Güldüğümüz an</div></div>
-<div class="card"><img src="foto4.jpg"><div class="note">Sessiz bir akşam</div></div>
-<div class="card"><img src="foto5.jpg"><div class="note">Uzun yürüyüş</div></div>
-<div class="card"><img src="foto6.jpg"><div class="note">Soğuk ama güzel</div></div>
-<div class="card"><img src="foto7.jpg"><div class="note">Birlikteyken</div></div>
-<div class="card"><img src="foto8.jpg"><div class="note">Aniden</div></div>
-<div class="card"><img src="foto9.jpg"><div class="note">Hatırladıkça</div></div>
-<div class="card"><img src="foto10.jpg"><div class="note">Yıl ortası</div></div>
-
-</div>
+<div class="card left"><img src="foto1.jpg"><div class="note">Yılın ilk günü</div></div>
+<div class="card right"><img src="foto2.jpg"><div class="note">Kaybolduğumuz sokak</div></div>
+<div class="card left"><img src="foto3.jpg"><div class="note">Güldüğümüz an</div></div>
+<div class="card right"><img src="foto4.jpg"><div class="note">Sessiz bir akşam</div></div>
+<div class="card left"><img src="foto5.jpg"><div class="note">Uzun yürüyüş</div></div>
+<div class="card right"><img src="foto6.jpg"><div class="note">Soğuk ama güzel</div></div>
+<div class="card left"><img src="foto7.jpg"><div class="note">Birlikteyken</div></div>
+<div class="card right"><img src="foto8.jpg"><div class="note">Aniden</div></div>
 
 <div class="spacer"></div>
 
@@ -165,6 +161,7 @@ Buraya kadar geldik.<br><br>
 Bu bir son değil,<br>
 sadece bu sayfaların kapanışı.
 </div>
+
 </div>
 
 <div class="turntable" onclick="toggle()">
@@ -179,7 +176,7 @@ const obs=new IntersectionObserver(entries=>{
   entries.forEach(e=>{
     if(e.isIntersecting) e.target.classList.add("show");
   });
-},{threshold:.2});
+},{threshold:.3});
 document.querySelectorAll(".card,.end-note").forEach(el=>obs.observe(el));
 
 /* MÜZİK */
@@ -187,17 +184,15 @@ let playing=false;
 function toggle(){
   const s=document.getElementById("ses");
   const v=document.querySelector(".vinyl");
-  if(!playing){ s.play(); v.classList.add("spin"); }
-  else{ s.pause(); v.classList.remove("spin"); }
+  if(!playing){s.play();v.classList.add("spin");}
+  else{s.pause();v.classList.remove("spin");}
   playing=!playing;
 }
 
 /* KAR */
-for(let i=0;i<35;i++){
+for(let i=0;i<30;i++){
   const s=document.createElement("div");
   s.className="snow";
-  const size=3+Math.random()*6;
-  s.style.width=s.style.height=size+"px";
   s.style.left=Math.random()*100+"vw";
   s.style.animationDuration=(6+Math.random()*6)+"s";
   document.body.appendChild(s);
