--- a/index.html
+++ b/index.html
@@ -6,11 +6,78 @@
 <title>Anı Defteri</title>
 
 <style>
+*{box-sizing:border-box;}
 body{
   margin:0;
-  background:linear-gradient(180deg,#f6eddc,#efe4cf);
   font-family:Georgia, serif;
-  overflow-x:hidden;
+  background:linear-gradient(180deg,#f6eddc,#efe4cf);
+}
+
+/* === SCROLL SNAP === */
+.wrapper{
+  height:100vh;
+  overflow-y:scroll;
+  scroll-snap-type:y mandatory;
+}
+
+/* === HER SAYFA === */
+.section{
+  height:100vh;
+  display:flex;
+  align-items:center;
+  scroll-snap-align:start;
+  padding:0 12px;
+}
+
+/* KART */
+.card{
+  width:78%;
+  background:#f3ecd9;
+  padding:12px 12px 24px;
+  border-radius:16px;
+  box-shadow:0 18px 40px rgba(0,0,0,.28);
+  opacity:0;
+  transition:all 1.2s ease;
+}
+
+/* FOTO */
+.card img{
+  width:100%;
+  height:300px;
+  object-fit:cover;
+  border-radius:10px;
+  filter:sepia(.35) contrast(1.05) brightness(.95);
+}
+
+/* NOT */
+.note{
+  margin-top:10px;
+  font-size:14px;
+  font-style:italic;
+  text-align:center;
+  color:#6b5b3e;
+}
+
+/* SOL */
+.left{
+  justify-content:flex-start;
+}
+.left .card{
+  transform:translateX(-80px) rotate(-2deg);
+}
+
+/* SAĞ */
+.right{
+  justify-content:flex-end;
+}
+.right .card{
+  transform:translateX(80px) rotate(2deg);
+}
+
+/* GÖRÜN */
+.show .card{
+  opacity:1;
+  transform:translateX(0) rotate(0);
 }
 
 /* KAR */
@@ -27,90 +94,10 @@ body{
 }
 @keyframes fall{to{transform:translateY(120vh);}}
 
-/* ALAN */
-.container{
-  max-width:420px;
-  margin:auto;
-  padding-top:120px;
-}
-
-/* KART */
-.card{
-  width:75%;
-  background:#f3ecd9;
-  padding:12px 12px 24px;
-  border-radius:16px;
-  box-shadow:0 18px 40px rgba(0,0,0,.28);
-  margin-bottom:140px;
-  opacity:0;
-  transform:translateY(60px);
-  transition:all 1.2s ease;
-}
-
-/* SAĞ - SOL */
-.card.left{
-  margin-left:0;
-  margin-right:auto;
-  transform:translateY(60px) rotate(-2deg);
-}
-.card.right{
-  margin-left:auto;
-  margin-right:0;
-  transform:translateY(60px) rotate(2deg);
-}
-
-.card.show{
-  opacity:1;
-  transform:translateY(0) rotate(0);
-}
-
-/* FOTO */
-.card img{
-  width:100%;
-  height:260px;
-  object-fit:cover;
-  border-radius:10px;
-  filter:sepia(.35) contrast(1.05) brightness(.95);
-}
-
-/* NOT */
-.note{
-  margin-top:10px;
-  font-size:14px;
-  font-style:italic;
-  text-align:center;
-  color:#6b5b3e;
-}
-
-/* BOŞLUK */
-.spacer{
-  height:800px;
-}
-
-/* KAPANIŞ */
-.end-note{
-  width:85%;
-  background:#f8f1df;
-  margin:0 auto 160px;
-  padding:40px 28px 55px;
-  border-radius:18px;
-  box-shadow:0 18px 40px rgba(0,0,0,.25);
-  font-style:italic;
-  line-height:1.8;
-  color:#5c4a2d;
-  opacity:0;
-  transform:translateY(40px);
-  transition:all 1.3s ease;
-}
-.end-note.show{
-  opacity:1;
-  transform:translateY(0);
-}
-
 /* PİKAP */
 .turntable{
   position:fixed;
-  bottom:24px;
+  bottom:20px;
   left:50%;
   transform:translateX(-50%);
   width:90px;
@@ -143,24 +130,25 @@ body{
 
 <body>
 
-<div class="container">
+<div class="wrapper">
 
-<div class="card left"><img src="foto1.jpg"><div class="note">Yılın ilk günü</div></div>
-<div class="card right"><img src="foto2.jpg"><div class="note">Kaybolduğumuz sokak</div></div>
-<div class="card left"><img src="foto3.jpg"><div class="note">Güldüğümüz an</div></div>
-<div class="card right"><img src="foto4.jpg"><div class="note">Sessiz bir akşam</div></div>
-<div class="card left"><img src="foto5.jpg"><div class="note">Uzun yürüyüş</div></div>
-<div class="card right"><img src="foto6.jpg"><div class="note">Soğuk ama güzel</div></div>
-<div class="card left"><img src="foto7.jpg"><div class="note">Birlikteyken</div></div>
-<div class="card right"><img src="foto8.jpg"><div class="note">Aniden</div></div>
+<div class="section left"><div class="card">
+<img src="foto1.jpg"><div class="note">Yılın ilk günü</div></div></div>
 
-<div class="spacer"></div>
+<div class="section right"><div class="card">
+<img src="foto2.jpg"><div class="note">Kaybolduğumuz sokak</div></div></div>
 
-<div class="end-note">
-Buraya kadar geldik.<br><br>
-Bu bir son değil,<br>
-sadece bu sayfaların kapanışı.
-</div>
+<div class="section left"><div class="card">
+<img src="foto3.jpg"><div class="note">Güldüğümüz an</div></div></div>
+
+<div class="section right"><div class="card">
+<img src="foto4.jpg"><div class="note">Sessiz bir akşam</div></div></div>
+
+<div class="section left"><div class="card">
+<img src="foto5.jpg"><div class="note">Uzun yürüyüş</div></div></div>
+
+<div class="section right"><div class="card">
+<img src="foto6.jpg"><div class="note">Soğuk ama güzel</div></div></div>
 
 </div>
 
@@ -171,13 +159,13 @@ sadece bu sayfaların kapanışı.
 <audio id="ses" src="ses.mp3" loop></audio>
 
 <script>
-/* SCROLL */
+/* OBSERVER */
 const obs=new IntersectionObserver(entries=>{
   entries.forEach(e=>{
     if(e.isIntersecting) e.target.classList.add("show");
   });
-},{threshold:.3});
-document.querySelectorAll(".card,.end-note").forEach(el=>obs.observe(el));
+},{threshold:.6});
+document.querySelectorAll(".section").forEach(s=>obs.observe(s));
 
 /* MÜZİK */
 let playing=false;
@@ -190,7 +178,7 @@ function toggle(){
 }
 
 /* KAR */
-for(let i=0;i<30;i++){
+for(let i=0;i<28;i++){
   const s=document.createElement("div");
   s.className="snow";
   s.style.left=Math.random()*100+"vw";
