--- a/index.html
+++ b/index.html
@@ -6,21 +6,21 @@
 <title>Anı Defteri</title>
 
 <style>
-*{box-sizing:border-box;}
+*{box-sizing:border-box}
 body{
   margin:0;
   font-family:Georgia, serif;
   background:linear-gradient(180deg,#f6eddc,#efe4cf);
 }
 
-/* === SCROLL SNAP === */
+/* SCROLL SNAP */
 .wrapper{
   height:100vh;
   overflow-y:scroll;
   scroll-snap-type:y mandatory;
 }
 
-/* === HER SAYFA === */
+/* SAYFA */
 .section{
   height:100vh;
   display:flex;
@@ -33,11 +33,13 @@ body{
 .card{
   width:78%;
   background:#f3ecd9;
-  padding:12px 12px 24px;
-  border-radius:16px;
-  box-shadow:0 18px 40px rgba(0,0,0,.28);
+  padding:14px 14px 26px;
+  border-radius:18px;
+  box-shadow:0 20px 45px rgba(0,0,0,.28);
   opacity:0;
-  transition:all 1.2s ease;
+  transition:
+    opacity 2.2s cubic-bezier(0.22,1,0.36,1),
+    transform 2.2s cubic-bezier(0.22,1,0.36,1);
 }
 
 /* FOTO */
@@ -45,13 +47,13 @@ body{
   width:100%;
   height:300px;
   object-fit:cover;
-  border-radius:10px;
+  border-radius:12px;
   filter:sepia(.35) contrast(1.05) brightness(.95);
 }
 
 /* NOT */
 .note{
-  margin-top:10px;
+  margin-top:12px;
   font-size:14px;
   font-style:italic;
   text-align:center;
@@ -63,7 +65,7 @@ body{
   justify-content:flex-start;
 }
 .left .card{
-  transform:translateX(-80px) rotate(-2deg);
+  transform:translateX(-120px) rotate(-2.5deg);
 }
 
 /* SAĞ */
@@ -71,59 +73,66 @@ body{
   justify-content:flex-end;
 }
 .right .card{
-  transform:translateX(80px) rotate(2deg);
+  transform:translateX(120px) rotate(2.5deg);
 }
 
-/* GÖRÜN */
+/* GÖRÜNÜR */
 .show .card{
   opacity:1;
   transform:translateX(0) rotate(0);
 }
 
-/* KAR */
-.snow{
-  position:fixed;
-  top:-10px;
-  width:6px;
-  height:6px;
-  background:white;
-  border-radius:50%;
-  opacity:.6;
-  animation:fall linear infinite;
-  pointer-events:none;
-}
-@keyframes fall{to{transform:translateY(120vh);}}
-
-/* PİKAP */
+/* ===== PİKAP ===== */
 .turntable{
   position:fixed;
-  bottom:20px;
+  bottom:22px;
   left:50%;
   transform:translateX(-50%);
-  width:90px;
-  height:90px;
-  background:#5a3e2b;
-  border-radius:12px;
-  box-shadow:0 20px 40px rgba(0,0,0,.6);
+  width:100px;
+  height:100px;
+  background:#4b3323;
+  border-radius:14px;
+  box-shadow:0 25px 50px rgba(0,0,0,.55);
 }
+
+/* GERÇEKÇİ PLAK */
 .vinyl{
   position:absolute;
   top:10px;
   left:10px;
-  width:70px;
-  height:70px;
-  background:radial-gradient(circle,#111 30%,#000 70%);
+  width:80px;
+  height:80px;
   border-radius:50%;
+  background:
+    repeating-radial-gradient(
+      circle,
+      #0b0b0b 0px,
+      #0b0b0b 2px,
+      #141414 3px,
+      #141414 4px
+    );
+  box-shadow:inset 0 0 8px rgba(255,255,255,.08);
 }
 .vinyl::after{
   content:"";
   position:absolute;
-  inset:26px;
+  inset:28px;
   background:#cfa56a;
   border-radius:50%;
+  box-shadow:inset 0 0 4px rgba(0,0,0,.4);
 }
-.spin{animation:spin 3s linear infinite;}
-@keyframes spin{to{transform:rotate(360deg);}}
+.vinyl::before{
+  content:"";
+  position:absolute;
+  inset:0;
+  border-radius:50%;
+  background:linear-gradient(135deg,rgba(255,255,255,.15),transparent 40%);
+}
+
+.spin{
+  animation:spin 4.5s linear infinite;
+}
+@keyframes spin{to{transform:rotate(360deg)}}
 
 </style>
 </head>
@@ -132,23 +141,28 @@ body{
 
 <div class="wrapper">
 
-<div class="section left"><div class="card">
-<img src="foto1.jpg"><div class="note">Yılın ilk günü</div></div></div>
+<!-- 20 FOTO -->
+<div class="section left"><div class="card"><img src="foto1.jpg"><div class="note">Yılın ilk günü</div></div></div>
+<div class="section right"><div class="card"><img src="foto2.jpg"><div class="note">Kaybolduğumuz sokak</div></div></div>
+<div class="section left"><div class="card"><img src="foto3.jpg"><div class="note">Güldüğümüz an</div></div></div>
+<div class="section right"><div class="card"><img src="foto4.jpg"><div class="note">Sessiz bir akşam</div></div></div>
+<div class="section left"><div class="card"><img src="foto5.jpg"><div class="note">Uzun yürüyüş</div></div></div>
+<div class="section right"><div class="card"><img src="foto6.jpg"><div class="note">Soğuk ama güzel</div></div></div>
+<div class="section left"><div class="card"><img src="foto7.jpg"><div class="note">Birlikteyken</div></div></div>
+<div class="section right"><div class="card"><img src="foto8.jpg"><div class="note">Aniden</div></div></div>
+<div class="section left"><div class="card"><img src="foto9.jpg"><div class="note">Hatırladıkça</div></div></div>
+<div class="section right"><div class="card"><img src="foto10.jpg"><div class="note">Yıl ortası</div></div></div>
 
-<div class="section right"><div class="card">
-<img src="foto2.jpg"><div class="note">Kaybolduğumuz sokak</div></div></div>
-
-<div class="section left"><div class="card">
-<img src="foto3.jpg"><div class="note">Güldüğümüz an</div></div></div>
-
-<div class="section right"><div class="card">
-<img src="foto4.jpg"><div class="note">Sessiz bir akşam</div></div></div>
-
-<div class="section left"><div class="card">
-<img src="foto5.jpg"><div class="note">Uzun yürüyüş</div></div></div>
-
-<div class="section right"><div class="card">
-<img src="foto6.jpg"><div class="note">Soğuk ama güzel</div></div></div>
+<div class="section left"><div class="card"><img src="foto11.jpg"><div class="note">Yaz günü</div></div></div>
+<div class="section right"><div class="card"><img src="foto12.jpg"><div class="note">Güneşli an</div></div></div>
+<div class="section left"><div class="card"><img src="foto13.jpg"><div class="note">Kahkahalar</div></div></div>
+<div class="section right"><div class="card"><img src="foto14.jpg"><div class="note">Sessizlik</div></div></div>
+<div class="section left"><div class="card"><img src="foto15.jpg"><div class="note">Yol</div></div></div>
+<div class="section right"><div class="card"><img src="foto16.jpg"><div class="note">Sonbahar</div></div></div>
+<div class="section left"><div class="card"><img src="foto17.jpg"><div class="note">Bir akşam</div></div></div>
+<div class="section right"><div class="card"><img src="foto18.jpg"><div class="note">Düşünürken</div></div></div>
+<div class="section left"><div class="card"><img src="foto19.jpg"><div class="note">Geriye bakınca</div></div></div>
+<div class="section right"><div class="card"><img src="foto20.jpg"><div class="note">Yılın sonu</div></div></div>
 
 </div>
 
@@ -175,15 +189,6 @@ function toggle(){
   if(!playing){s.play();v.classList.add("spin");}
   else{s.pause();v.classList.remove("spin");}
   playing=!playing;
-}
-
-/* KAR */
-for(let i=0;i<28;i++){
-  const s=document.createElement("div");
-  s.className="snow";
-  s.style.left=Math.random()*100+"vw";
-  s.style.animationDuration=(6+Math.random()*6)+"s";
-  document.body.appendChild(s);
 }
 </script>
 
