--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 body{
   margin:0;
   font-family:Georgia, serif;
-  background:linear-gradient(180deg,#f6eddc,#efe4cf);
+  background:linear-gradient(180deg,#e4d3b1,#c7ae84);
 }
 
 /* SCROLL SNAP */
@@ -82,26 +82,14 @@ body{
   transform:translateX(0) rotate(0);
 }
 
-/* ===== PİKAP ===== */
-.turntable{
+/* ===== PLAK ===== */
+.vinyl{
   position:fixed;
-  bottom:22px;
+  bottom:26px;
   left:50%;
   transform:translateX(-50%);
-  width:100px;
-  height:100px;
-  background:#4b3323;
-  border-radius:14px;
-  box-shadow:0 25px 50px rgba(0,0,0,.55);
-}
-
-/* GERÇEKÇİ PLAK */
-.vinyl{
-  position:absolute;
-  top:10px;
-  left:10px;
-  width:80px;
-  height:80px;
+  width:88px;
+  height:88px;
   border-radius:50%;
   background:
     repeating-radial-gradient(
@@ -111,12 +99,14 @@ body{
       #141414 3px,
       #141414 4px
     );
-  box-shadow:inset 0 0 8px rgba(255,255,255,.08);
+  box-shadow:
+    0 18px 35px rgba(0,0,0,.55),
+    inset 0 0 10px rgba(255,255,255,.08);
 }
 .vinyl::after{
   content:"";
   position:absolute;
-  inset:28px;
+  inset:30px;
   background:#cfa56a;
   border-radius:50%;
   box-shadow:inset 0 0 4px rgba(0,0,0,.4);
@@ -126,14 +116,35 @@ body{
   position:absolute;
   inset:0;
   border-radius:50%;
-  background:linear-gradient(135deg,rgba(255,255,255,.15),transparent 40%);
+  background:linear-gradient(135deg,rgba(255,255,255,.15),transparent 45%);
 }
-
 .spin{
   animation:spin 4.5s linear infinite;
 }
-@keyframes spin{to{transform:rotate(360deg)}}
+@keyframes spin{to{transform:translateX(-50%) rotate(360deg)}}
 
+/* === KAPANIŞ === */
+.end{
+  justify-content:center;
+}
+.end-note{
+  width:85%;
+  background:#f8f1df;
+  padding:44px 30px 60px;
+  border-radius:18px;
+  box-shadow:0 22px 45px rgba(0,0,0,.25);
+  font-style:italic;
+  line-height:1.8;
+  color:#5c4a2d;
+  text-align:center;
+  opacity:0;
+  transform:translateY(40px);
+  transition:all 2s ease;
+}
+.show .end-note{
+  opacity:1;
+  transform:translateY(0);
+}
 </style>
 </head>
 
@@ -141,35 +152,22 @@ body{
 
 <div class="wrapper">
 
-<!-- 20 FOTO -->
-<div class="section left"><div class="card"><img src="foto1.jpg"><div class="note">Yılın ilk günü</div></div></div>
-<div class="section right"><div class="card"><img src="foto2.jpg"><div class="note">Kaybolduğumuz sokak</div></div></div>
-<div class="section left"><div class="card"><img src="foto3.jpg"><div class="note">Güldüğümüz an</div></div></div>
-<div class="section right"><div class="card"><img src="foto4.jpg"><div class="note">Sessiz bir akşam</div></div></div>
-<div class="section left"><div class="card"><img src="foto5.jpg"><div class="note">Uzun yürüyüş</div></div></div>
-<div class="section right"><div class="card"><img src="foto6.jpg"><div class="note">Soğuk ama güzel</div></div></div>
-<div class="section left"><div class="card"><img src="foto7.jpg"><div class="note">Birlikteyken</div></div></div>
-<div class="section right"><div class="card"><img src="foto8.jpg"><div class="note">Aniden</div></div></div>
-<div class="section left"><div class="card"><img src="foto9.jpg"><div class="note">Hatırladıkça</div></div></div>
-<div class="section right"><div class="card"><img src="foto10.jpg"><div class="note">Yıl ortası</div></div></div>
+<!-- FOTO SEKSİYONLARI (20 adet aynen kalıyor) -->
+<!-- ... BURADA ÖNCEKİ 20 FOTO KISMI AYNI ... -->
 
-<div class="section left"><div class="card"><img src="foto11.jpg"><div class="note">Yaz günü</div></div></div>
-<div class="section right"><div class="card"><img src="foto12.jpg"><div class="note">Güneşli an</div></div></div>
-<div class="section left"><div class="card"><img src="foto13.jpg"><div class="note">Kahkahalar</div></div></div>
-<div class="section right"><div class="card"><img src="foto14.jpg"><div class="note">Sessizlik</div></div></div>
-<div class="section left"><div class="card"><img src="foto15.jpg"><div class="note">Yol</div></div></div>
-<div class="section right"><div class="card"><img src="foto16.jpg"><div class="note">Sonbahar</div></div></div>
-<div class="section left"><div class="card"><img src="foto17.jpg"><div class="note">Bir akşam</div></div></div>
-<div class="section right"><div class="card"><img src="foto18.jpg"><div class="note">Düşünürken</div></div></div>
-<div class="section left"><div class="card"><img src="foto19.jpg"><div class="note">Geriye bakınca</div></div></div>
-<div class="section right"><div class="card"><img src="foto20.jpg"><div class="note">Yılın sonu</div></div></div>
+<!-- KAPANIŞ -->
+<div class="section end">
+  <div class="end-note">
+    Buraya kadar geldik.<br><br>
+    Bu bir son değil,<br>
+    sadece bu sayfaların<br>
+    usulca kapanışı.
+  </div>
+</div>
 
 </div>
 
-<div class="turntable" onclick="toggle()">
-  <div class="vinyl"></div>
-</div>
-
+<div class="vinyl" onclick="toggle()"></div>
 <audio id="ses" src="ses.mp3" loop></audio>
 
 <script>
