--- a/index.html
+++ b/index.html
@@ -150,34 +150,34 @@ body{
 
 <div class="wrapper">
 
-<div class="section left"><div class="card"><img src="foto1.jpg"><div class="note">Yılın ilk günü</div></div></div>
-<div class="section right"><div class="card"><img src="foto2.jpg"><div class="note">Kaybolduğumuz sokak</div></div></div>
-<div class="section left"><div class="card"><img src="foto3.jpg"><div class="note">Birlikte yürürken</div></div></div>
-<div class="section right"><div class="card"><img src="foto4.jpg"><div class="note">Sessiz bir akşam</div></div></div>
-<div class="section left"><div class="card"><img src="foto5.jpg"><div class="note">Güldüğümüz an</div></div></div>
-<div class="section right"><div class="card"><img src="foto6.jpg"><div class="note">Soğuk bir gün</div></div></div>
-<div class="section left"><div class="card"><img src="foto7.jpg"><div class="note">Bir an</div></div></div>
-<div class="section right"><div class="card"><img src="foto8.jpg"><div class="note">Hatırladıkça</div></div></div>
-<div class="section left"><div class="card"><img src="foto9.jpg"><div class="note">Yıl ortası</div></div></div>
-<div class="section right"><div class="card"><img src="foto10.jpg"><div class="note">Bir yaz günü</div></div></div>
+<div class="section left"><div class="card"><img src="foto1.jpg"><div class="note">Çok güzel bir gün geçirdikkk</div></div></div>
+<div class="section right"><div class="card"><img src="foto2.jpg"><div class="note">Benim çektiklerim daha güzel çıkmıştı</div></div></div>
+<div class="section left"><div class="card"><img src="foto3.jpg"><div class="note">Motorumuzu yıkadıkkk</div></div></div>
+<div class="section right"><div class="card"><img src="foto4.jpg"><div class="note">Aramızda çok değişik bağlar olan mahmut</div></div></div>
+<div class="section left"><div class="card"><img src="foto5.jpg"><div class="note">Dubai ıvırzıvırı yediğimiz gün çok güzeldi ilk deneyim</div></div></div>
+<div class="section right"><div class="card"><img src="foto6.jpg"><div class="note">YUKARDAN ÇEKME DİYEN GÜLİZAR</div></div></div>
+<div class="section left"><div class="card"><img src="foto7.jpg"><div class="note">Mışıl mışıl uyuyo</div></div></div>
+<div class="section right"><div class="card"><img src="foto8.jpg"><div class="note">Neredeyse koca yıl birbirimize böyle yemek yedirdik</div></div></div>
+<div class="section left"><div class="card"><img src="foto9.jpg"><div class="note">NAM NAM NAM</div></div></div>
+<div class="section right"><div class="card"><img src="foto10.jpg"><div class="note">Aşkım güneş ne güzel vuruyorrr</div></div></div>
 
-<div class="section left"><div class="card"><img src="foto11.jpg"><div class="note">Geriye bakınca</div></div></div>
-<div class="section right"><div class="card"><img src="foto12.jpg"><div class="note">Sonbahar</div></div></div>
-<div class="section left"><div class="card"><img src="foto13.jpg"><div class="note">Küçük mutluluk</div></div></div>
-<div class="section right"><div class="card"><img src="foto14.jpg"><div class="note">Bir akşam</div></div></div>
-<div class="section left"><div class="card"><img src="foto15.jpg"><div class="note">Uzun yol</div></div></div>
-<div class="section right"><div class="card"><img src="foto16.jpg"><div class="note">Durup bakınca</div></div></div>
-<div class="section left"><div class="card"><img src="foto17.jpg"><div class="note">Günün sonu</div></div></div>
-<div class="section right"><div class="card"><img src="foto18.jpg"><div class="note">Birlikteyken</div></div></div>
-<div class="section left"><div class="card"><img src="foto19.jpg"><div class="note">Hatıra</div></div></div>
-<div class="section right"><div class="card"><img src="foto20.jpg"><div class="note">Yılın sonu</div></div></div>
+<div class="section left"><div class="card"><img src="foto11.jpg"><div class="note">Şebeklikler</div></div></div>
+<div class="section right"><div class="card"><img src="foto12.jpg"><div class="note">Yaptık</div></div></div>
+<div class="section left"><div class="card"><img src="foto13.jpg"><div class="note">Çok riksli ve dumpsal bir gün</div></div></div>
+<div class="section right"><div class="card"><img src="foto14.jpg"><div class="note">Çok acıkmıştık</div></div></div>
+<div class="section left"><div class="card"><img src="foto15.jpg"><div class="note">ŞEBEĞİMİN DİŞİ AĞRIYOR</div></div></div>
+<div class="section right"><div class="card"><img src="foto16.jpg"><div class="note">Paint Artist Gülizar ACET</div></div></div>
+<div class="section left"><div class="card"><img src="foto17.jpg"><div class="note">Spider-man berem</div></div></div>
+<div class="section right"><div class="card"><img src="foto18.jpg"><div class="note">En güzel kurabiyeee</div></div></div>
+<div class="section left"><div class="card"><img src="foto19.jpg"><div class="note">Birbirimize verip</div></div></div>
+<div class="section right"><div class="card"><img src="foto20.jpg"><div class="note">Tuttuğumuz sözler</div></div></div>
 
 <div class="section end">
   <div class="end-note">
-    Buraya kadar geldik.<br><br>
-    Bu bir son değil,<br>
-    sadece bu sayfaların<br>
-    usulca kapanışı.
+    Yorucu, stresli, yoğun bir yıldı. .<br><br>
+    Ama bu demek değil ki bu yıl kötü,<br>
+    Benim ömrümün en güzel günleri yaşıyorum,<br>
+    Seni çok seviyorum güzelim İyi ki varsın meleğim
   </div>
 </div>
 
@@ -239,3 +239,4 @@ function toggleMusic(){
 
 </body>
 </html>
+
