--- a/index.html
+++ b/index.html
@@ -158,14 +158,14 @@ body{
 <div class="section right"><div class="card"><img src="foto6.jpg"><div class="note">YUKARDAN ÇEKME DİYEN GÜLİZAR</div></div></div>
 <div class="section left"><div class="card"><img src="foto7.jpg"><div class="note">Mışıl mışıl uyuyo</div></div></div>
 <div class="section right"><div class="card"><img src="foto8.jpg"><div class="note">Neredeyse koca yıl birbirimize böyle yemek yedirdik</div></div></div>
-<div class="section left"><div class="card"><img src="foto9.jpg"><div class="note">NAM NAM NAM</div></div></div>
+<div class="section left"><div class="card"><img src="foto9.jpg"><div class="note">Şebeğimin dişi ağrıyor</div></div></div>
 <div class="section right"><div class="card"><img src="foto10.jpg"><div class="note">Aşkım güneş ne güzel vuruyorrr</div></div></div>
 
 <div class="section left"><div class="card"><img src="foto11.jpg"><div class="note">Şebeklikler</div></div></div>
 <div class="section right"><div class="card"><img src="foto12.jpg"><div class="note">Yaptık</div></div></div>
 <div class="section left"><div class="card"><img src="foto13.jpg"><div class="note">Çok riksli ve dumpsal bir gün</div></div></div>
 <div class="section right"><div class="card"><img src="foto14.jpg"><div class="note">Çok acıkmıştık</div></div></div>
-<div class="section left"><div class="card"><img src="foto15.jpg"><div class="note">ŞEBEĞİMİN DİŞİ AĞRIYOR</div></div></div>
+<div class="section left"><div class="card"><img src="foto15.jpg"><div class="note">NAMNAMNAMMM</div></div></div>
 <div class="section right"><div class="card"><img src="foto16.jpg"><div class="note">Paint Artist Gülizar ACET</div></div></div>
 <div class="section left"><div class="card"><img src="foto17.jpg"><div class="note">Spider-man berem</div></div></div>
 <div class="section right"><div class="card"><img src="foto18.jpg"><div class="note">En güzel kurabiyeee</div></div></div>
@@ -239,4 +239,5 @@ function toggleMusic(){
 
 </body>
 </html>
+
 
