--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@ body{
   font-family:Georgia, serif;
   background:
     url("paper-texture.png"),
-    linear-gradient(180deg,#d2b48c,#b08a5a);
+    background:linear-gradient(180deg,#6e1f1f,#c8a165);
   background-size:cover;
 }
 
@@ -239,5 +239,6 @@ function toggleMusic(){
 
 </body>
 </html>
+
 
 
