--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Anı Defteri</title>
+<title>bizim yılımız</title>
 
 <link href="https://fonts.googleapis.com/css2?family=Shadows+Into+Light&display=swap" rel="stylesheet">
 
@@ -239,6 +239,7 @@ function toggleMusic(){
 
 </body>
 </html>
+
 
 
 
