--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@ body{
   height:100vh;
   overflow-y:scroll;
   scroll-snap-type:y mandatory;
+  background:transparent;
 }
 
 /* SECTION */
@@ -30,7 +31,9 @@ body{
   align-items:center;
   scroll-snap-align:start;
   padding:0 14px;
+  background:transparent;
 }
+
 
 /* CARD */
 .card{
@@ -236,6 +239,7 @@ function toggleMusic(){
 
 </body>
 </html>
+
 
 
 
