--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 body{
   margin:0;
   font-family:Georgia, serif;
-  background:linear-gradient(180deg,#6e1f1f,#c8a165);
+  background: linear-gradient(180deg,#4b1e24,#f1e2c6);
 }
 
 /* SCROLL */
@@ -239,6 +239,7 @@ function toggleMusic(){
 
 </body>
 </html>
+
 
 
 
