--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@ body{
   content:"";
   position:absolute;
   inset:30px;
-  background:#caa46a;
+  background:#FCFCFC;
   border-radius:50%;
 }
 .spin{
@@ -239,6 +239,7 @@ function toggleMusic(){
 
 </body>
 </html>
+
 
 
 
