--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@ body{
   font-family:'Shadows Into Light', cursive;
   font-size:16px;
   text-align:center;
-  color:#6b5534;
+  color:#FCFCFC;
 }
 
 /* LEFT */
@@ -239,6 +239,7 @@ function toggleMusic(){
 
 </body>
 </html>
+
 
 
 
